--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+header> {
+  text-align: center;
 }
+image{
+  display: block;
+  margin: 0 auto;
+  max-width: 70%;
+}
+nav a {
+  padding: 10px;
+  background-color: grey;
+  text-align: center;
+  display: inline-block;
+  margin: 0 10px;
+}
+figcaption {
+  font-size: smaller;
+  text-align: center;
+}
+#featured-property{
+  width: 60%;
+  text-align: center;
+  margin: 20px auto;
+}
+    #details div {
+      float: left;
+      text-align: center;
+      width: 25;
+      background-color: red;
+    }
